--- a/index.css
+++ b/index.css
@@ -376,10 +376,9 @@ li {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  
 }
 .boxes {
-  flex:1;
+  flex: 1;
   width: 389px;
   height: 200px;
   border: 1px solid #eaeeed;
@@ -389,8 +388,8 @@ li {
   margin-right: 16px;
   /* box-shadow: 0 0 10px 0 rgba(56,81,76,.12);  hover*/
 }
-.boxes:hover{
-  box-shadow: 0 0 10px 0 rgba(56,81,76,.12)
+.boxes:hover {
+  box-shadow: 0 0 10px 0 rgba(56, 81, 76, 0.12);
 }
 .box-cont {
   width: 351px;
@@ -435,7 +434,7 @@ li {
   margin-right: 6px;
   width: 73px;
   height: 28px;
-  color:#999;
+  color: #999;
   border: 1px solid #999;
   font-size: 12px;
   line-height: 28px;
@@ -448,60 +447,148 @@ li {
 }
 .box-logo img {
   display: inline-block;
-  padding:20px 10px 0px 0px;
+  padding: 20px 10px 0px 0px;
   width: 40px;
   height: 40px;
 }
-.logo-cpy{
+.logo-cpy {
   display: inline-block;
 }
-.cpy1{
-  color:#555;
+.cpy1 {
+  color: #555;
   font-size: 14px;
 }
-.cpy2{
-  color:#999;
+.cpy2 {
+  color: #999;
   font-size: 14px;
 }
-.current-btn{
+.current-btn {
   width: 1200px;
   margin: 0 auto;
   text-align: center;
-  
 }
-.current-btn button{
+.current-btn button {
   margin: 0;
   padding: 0;
   width: 384px;
   height: 42px;
-  border: 1px solid #00B38A;
-  color:#00B38A;
+  border: 1px solid #00b38a;
+  color: #00b38a;
   background-color: #fff;
   margin-top: 16px;
   position: relative;
   left: -8px;
 }
-.current-btn:hover button{
-  color:#fff;
+.current-btn:hover button {
+  color: #fff;
   background-color: #00b38a;
 }
-#hot-company{
+#hot-company {
   width: 1200px;
-  margin:0 auto;
-  margin-top:52px;
+  margin: 0 auto;
+  margin-top: 52px;
   /* padding:0px 0px 14px 0px; */
-  border-bottom:1px solid #555;
 }
-.company-title{
+.company-title {
   /* padding: 14px 0px; */
   font-size: 16px;
-  color:#333;
+  color: #333;
   /* margin-bottom: 14px; */
   height: 51px;
   width: 128px;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid #333;
 }
-#footer{
+.title-box {
+  border-bottom: 1px solid #e8e8e8;
+}
+.company-box {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1216px;
+  height: 572px;
+}
+.com-boxes {
+  flex:1;
+  width: 288px;
+  height: 270px;
+  margin: 16px 16px 0px 0px;
+  border: 1px solid #e8e8e8;
+}
+.com-boxes:hover {
+  box-shadow: 0 0 10px 0 rgba(56, 81, 76, 0.12);
+}
+.com-cont{
+  width: 260px;
+  margin:0 auto;
+  text-align: center;
+  /* height: 202px; */
+}
+.box-top{
+  width: 260px;
+  height: 167px;
+  margin:0 auto;
+  padding:20px 0px 14px 0px;
+  border-bottom: 1px dashed #e0e0e0;
+}
+.com-cont img{
+  width: 80px;
+  height: 80px;
+}
+.com-name{
+  color: #333;
+  font-size: 16px;
+  margin-top:13px;
+}
+.com-class{
+  font-size: 14px;
+  color:#999;
+  margin-top: 3px;
+}
+.com-explain{
+  font-size: 14px;
+  color:#555;
+  overflow:hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-top: 5px;
+}
+.box-bottom{
+  width: 260px;
+  margin:0 auto;
+  
+}
+.bottom-left,.bottom-middle{
+  margin-top: 15px;
+  width: 80px;
+  height: 35px;
+  border-right:1px solid #e0e0e0;
+  display: inline-block;
+  /* line-height: 35px; */
+}
+.bottom-right{
+  width: 80px;
+  height: 35px;
+  margin-top: 15px;
+  display: inline-block;
+}
+.left-num,.middle-num,.right-num{
+  color: #00b38a;
+  font-size: 14px;
+}
+.left-text,.middle-text,.right-text{
+color:#999;
+font-size: 12px;
+}
+.left-text:hover{
+  color:#00b38a;
+}
+.middle-text:hover{
+  color:#00b38a
+}
+.right-text:hover{
+  color:#00b38a
+}
+#footer {
   padding-top: 100px;
   width: 1200px;
   height: 300px;
