--- a/index.css
+++ b/index.css
@@ -624,23 +624,25 @@ li {
   padding: 14px 0;
   border-bottom: 2px solid #333;
 }
-.link-cont{
+.link-cont {
   display: inline-block;
   width: 1120px;
   height: 30px;
-  margin-top:16px;
+  margin-top: 16px;
   overflow: hidden;
 }
-
+.link-cont a :hover{
+  color:#00b38a;
+}
 .link-cont p {
   display: inline-block;
-  padding:8px 18px 8px 0;
+  padding: 8px 18px 8px 0;
   /*padding-right: 18px;
-  */color: #555;
+  */
+  color: #555;
   font-size: 14px;
-  
 }
-.extend{
+.extend {
   display: inline-block;
   text-align: right;
   vertical-align: top;
@@ -649,7 +651,7 @@ li {
   font-size: 14px;
   margin-left: 47px;
 }
-.extend :hover .link-cont{
+.extend :hover .link-cont {
   height: 175px;
 }
 /* .extend i{
@@ -661,10 +663,10 @@ li {
   height: 12px;
   margin-left: 5px;
 } */
-.footer-line{
+.footer-line {
   margin-top: 80px;
   width: 100%;
-  border-bottom:1px solid #e8e8e8;
+  border-bottom: 1px solid #e8e8e8;
 }
 #footer {
   padding-top: 100px;
@@ -672,14 +674,15 @@ li {
   height: 300px;
   margin: 0 auto;
 }
-.footer-left{
+.footer-left {
   display: inline-block;
   width: 182px;
   height: 170px;
   padding-right: 130px;
   border-right: 1px solid #e8e8e8;
 }
-.footer-app button,.footer-miniapp button{
+.footer-app button,
+.footer-miniapp button {
   margin: 0;
   padding: 0;
   border: 1px solid #00b38a;
@@ -689,39 +692,122 @@ li {
   height: 42px;
   margin-bottom: 16px;
   font-size: 14px;
+  outline: none;
+  position: relative;
 }
-.contact{
+.footer-app button:hover {
+  background-color: #00b38a;
+  color: #fff;
+}
+.footer-miniapp button:hover {
+  background-color: #00b38a;
+  color: #fff;
+}
+.mina {
+  width: 140px;
+  height: 140px;
+  top: 0;
+  left: 190px;
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
+  position: absolute;
+  display: none;
+}
+.footer-miniapp button:hover .mina {
+  display: block;
+}
+.contact {
   font-size: 14px;
   color: #555;
 }
-.weixin{
-  margin-right:65px;
+.weixin {
+  margin-right: 65px;
+  color: #555;
+  position: relative;
 }
-.footer-right{
+.weixin:hover{
+  color:#00b38a;
+}
+.weixin:hover .weixin-pic{
+  display: block;
+}
+.weixin-pic {
+  width: 140px;
+  height: 140px;
+  top: 25px;
+  left: 0;
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
+  position: absolute;
+  display: none;
+}
+.weibo {
+  color: #555;
+}
+.weibo:hover{
+  color:#00b38a;
+}
+.footer-right {
   display: inline-flex;
   vertical-align: top;
   width: 882px;
   height: 170px;
-
 }
-.serve{
+.serve {
   /* border:1px solid black; */
   display: inline-block;
-  flex:1;
+  flex: 1;
   margin-left: 130px;
 }
-.serve-title{
-  color:#555;
+.serve-title {
+  color: #555;
   font-size: 18px;
   font-weight: 600;
   margin-bottom: 30px;
 }
-.serve-cont p{
+.serve-cont p {
   white-space: nowrap;
-  color:#555;
+  color: #555;
   font-size: 14px;
   margin-bottom: 14px;
 }
-.serve-cont :hover p{  
-  color:#00b38a;
+.serve-cont :hover p {
+  color: #00b38a;
+}
+#copyright{
+  width: 100%;
+  height: 100px;
+  background-color: #FAFAFA;
+}
+.copyright-cont{
+  width: 1200px;
+  margin:0 auto;
+  color:#999;
+  font-size: 14px;
+  line-height: 100px;
+}
+.copyright-cont span a{
+  color:#999;
+}
+.copyright-cont span a:hover{
+  color:#555;
+}
+.beian{
+  margin-right:20px ;
+}
+.police{
+  border:1px solid #D5DADF;
+  display: inline-block;
+  font-size: 12px;
+  color:#999;
+  line-height: 14px;
+  margin-left: 20px;
+  padding: 8px 20px;
+  vertical-align: middle;
+}
+.gotop{
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right:280px;
+  bottom:175px;
+  background-color: #555;
 }
