--- a/index.css
+++ b/index.css
@@ -18,26 +18,35 @@ li {
   line-height: 40px;
   font-size: 14px;
   display: flex;
+  justify-content: center;
 }
 .flexLeft {
-  flex: 1.7;
+  flex: 1.3;
 }
 .flexRight {
   flex: 1;
 }
-.icon {
-  font-size: 20px;
-  color: #00b38a;
+.lagou-icon {
+  width: 42px;
+  height: 21px;
+  margin-top: 9px;
+  padding-right: 12px;
+  background: url(./img/sprite_361857f.png) -10px -10px no-repeat;
+  background-size: 64px 128px;
+  display: inline-block;
 }
 .headBar a {
   color: #afb5c0;
 }
 .station {
-  color: #00b38a;
+  color: #0dca9f;
   padding: 0 12px 0 20px;
 }
 .changeStation {
   font-size: 12px;
+}
+.changeStation:hover {
+  color: #fff;
 }
 
 .indexLi,
@@ -45,6 +54,30 @@ li {
   display: inline-block;
   padding: 0 21px;
   height: 100%;
+}
+.indexLi li :hover {
+  color: #fff;
+}
+.indexLi li:nth-child(5) {
+  position: relative;
+}
+.indexLi li:nth-child(5) span {
+  display: inline-block;
+  position: absolute;
+  width: 29px;
+  top: 3px;
+  right: -6px;
+  font-size: 12px;
+  color: #fff;
+  text-align: center;
+  line-height: 16px;
+  padding-bottom: 2px;
+  background-color: #ff7452;
+  border-radius: 9px;
+  -webkit-border-radius: 9px;
+  -moz-border-radius: 9px;
+  -ms-border-radius: 9px;
+  -o-border-radius: 9px;
 }
 .barRight {
   text-align: right;
@@ -54,11 +87,65 @@ li {
   padding: 0 8px;
   color: #afb5c0;
 }
+.barRight :nth-child(2) {
+  margin-right: 12px;
+}
+.barRight :nth-child(3)::before {
+  content: "";
+  width: 18px;
+  height: 18px;
+  margin-right: 5px;
+  background-image: url(./img/sprite_361857f.png);
+  background-position: -76px -136px;
+  background-repeat: no-repeat;
+  display: inline-block;
+  vertical-align: middle;
+}
 .barRight :nth-child(4) {
-  padding-left: 0px;
+  padding: 0;
 }
 .barRight :nth-child(5) {
+  margin-right: 12px;
+}
+.barRight :nth-child(6)::before {
+  content: "";
+  display: block;
+  float: left;
+  width: 12px;
+  height: 17px;
+  margin-right: 4px;
+  margin-top: 11px;
+  background-image: url(./img/sprite_361857f.png);
+  background-repeat: no-repeat;
+  background-position: -64px -212px;
+}
+
+.barRight :nth-child(6) {
+  color: #0dca9f;
+}
+.barRight :nth-child(1) :hover {
+  color: #fff;
+}
+.barRight :nth-child(3):hover::before {
+  background-position: -76px -174px;
+}
+.barRight :nth-child(3) :hover {
+  color: #fff;
+}
+.barRight :nth-child(5):hover::before {
+  background-position: -76px -174px;
+}
+.barRight :nth-child(5) :hover {
+  color: #fff;
+}
+.barRight :nth-child(6):hover::before {
+  background-position: -96px -212px;
+}
+.barRight :nth-child(6) :hover {
   color: #00b38a;
+}
+.barRight :nth-child(7) :hover {
+  color: #fff;
 }
 #title {
   height: 120px;
@@ -106,8 +193,11 @@ li {
 }
 .inputBar div {
   display: inline-block;
+  position: relative;
+  top: 1px;
   height: 30px;
   width: 40px;
+  line-height: 27px;
   margin-left: -6px;
   text-align: center;
   background-color: #fff;
@@ -404,12 +494,86 @@ li {
   padding: 20px 0px 10px 0px;
   white-space: nowrap;
 }
+.publish-icon {
+  display: inline-block;
+  position: relative;
+  height: 0;
+}
 .publish {
   vertical-align: top;
   display: inline-block;
   color: #999;
   font-size: 14px;
-  padding: 20px 65px 10px 0px;
+  padding: 20px 0px 10px 0px;
+}
+.chat-img {
+  display: inline-block;
+  /* line-height: 14px; */
+  width: 16px;
+  height: 16px;
+  position: relative;
+  top: -13px;
+  margin-right: 44px;
+  cursor: pointer;
+}
+.chat-active {
+  cursor: pointer;
+  position: absolute;
+  left: 39px;
+  top: -46px;
+  width: 312px;
+  height: 132px;
+  padding: 16px;
+  border: 1px solid #dce4e6;
+  background-color: #fff;
+  display: none;
+}
+.publish-icon:hover .chat-active {
+  display: block;
+}
+.chat-left {
+  display: inline-block;
+}
+.chat-right {
+  display: inline-block;
+}
+.active-img {
+  /* cursor: pointer; */
+  width: 62px;
+  height: 62px;
+  border-radius: 50%;
+  /* overflow:hidden; */
+}
+.chat-title {
+  display: inline-block;
+  vertical-align: top;
+  padding-left: 10px;
+}
+.chat_title_name {
+  font-size: 18px;
+  line-height: 30px;
+  color: #333;
+}
+.chat_title_info {
+  color: #999;
+  font-size: 14px;
+}
+.chat-info {
+  font-size: 14px;
+  width: 182px;
+  margin-right: 9px;
+  color: #555;
+}
+.triangle {
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  top: 32px;
+  left: -9px;
+  background-color: #fff;
+  border-top: 1px solid #dce4e6;
+  border-left: 1px solid #dce4e6;
+  transform: rotate(-45deg);
 }
 .money {
   padding: 20px 0px 10px 0px;
@@ -631,8 +795,8 @@ li {
   margin-top: 16px;
   overflow: hidden;
 }
-.link-cont a :hover{
-  color:#00b38a;
+.link-cont a :hover {
+  color: #00b38a;
 }
 .link-cont p {
   display: inline-block;
@@ -671,8 +835,9 @@ li {
 #footer {
   padding-top: 100px;
   width: 1200px;
-  height: 300px;
+  /* height: 300px; */
   margin: 0 auto;
+  margin-bottom: 90px;
 }
 .footer-left {
   display: inline-block;
@@ -724,10 +889,10 @@ li {
   color: #555;
   position: relative;
 }
-.weixin:hover{
-  color:#00b38a;
+.weixin:hover {
+  color: #00b38a;
 }
-.weixin:hover .weixin-pic{
+.weixin:hover .weixin-pic {
   display: block;
 }
 .weixin-pic {
@@ -742,8 +907,8 @@ li {
 .weibo {
   color: #555;
 }
-.weibo:hover{
-  color:#00b38a;
+.weibo:hover {
+  color: #00b38a;
 }
 .footer-right {
   display: inline-flex;
@@ -772,42 +937,262 @@ li {
 .serve-cont :hover p {
   color: #00b38a;
 }
-#copyright{
+#copyright {
   width: 100%;
   height: 100px;
-  background-color: #FAFAFA;
+  background-color: #fafafa;
 }
-.copyright-cont{
+.copyright-cont {
+  display: flex;
+  align-items: center;
   width: 1200px;
-  margin:0 auto;
-  color:#999;
+  margin: 0 auto;
+  color: #999;
   font-size: 14px;
   line-height: 100px;
 }
-.copyright-cont span a{
-  color:#999;
+.copyright-cont span a {
+  color: #999;
 }
-.copyright-cont span a:hover{
-  color:#555;
+.copyright-cont span a:hover {
+  color: #555;
 }
-.beian{
-  margin-right:20px ;
+.beian {
+  margin-right: 20px;
 }
-.police{
-  border:1px solid #D5DADF;
+.police {
+  border: 1px solid #d5dadf;
   display: inline-block;
   font-size: 12px;
-  color:#999;
+  color: #999;
   line-height: 14px;
   margin-left: 20px;
   padding: 8px 20px;
   vertical-align: middle;
 }
-.gotop{
-  width: 50px;
-  height: 50px;
+.police-info {
+  display: inline-block;
+}
+.footer-lagou-icon {
+  display: inline-block;
+  width: 198px;
+  height: 19px;
+  background: url(./img/footer_lagou_icon_75f0ebc.png) 0 0 no-repeat;
+  text-align: center;
+  position: relative;
+  top: 8px;
+}
+.copyright-cont-left {
+  flex: 1;
+}
+.copyright-cont-right {
+  width: 198px;
+}
+.sprite-gongan {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background: url(./img/sprite_9dd5c92.png) -150px -184px no-repeat;
+  margin-right: 5px;
+  position: relative;
+  top: 2px;
+}
+.sprite-jubao {
+  display: inline-block;
+  width: 20px;
+  height: 24px;
+  background: url(./img/sprite_9dd5c92.png) -132px -20px no-repeat;
+  margin-right: 10px;
+  margin-bottom: 6px;
+}
+.gotop {
+  width: 28px;
+  height: 46px;
   position: fixed;
-  right:280px;
-  bottom:175px;
-  background-color: #555;
+  right: 280px;
+  bottom: 175px;
+  background-image: url(./img/backtop-new_0e4bcbc.png);
+}
+.gotop:hover {
+  background-position: -38px 0px;
+}
+
+/* web页面css样式 */
+/* 搜索栏 */
+.search_wrapper {
+  height: 180px;
+  width: 100%;
+  background: #f2f5f4;
+  margin-bottom: 35px;
+}
+.zhaopin_search_bar {
+  width: 958px;
+  margin-left: 351px;
+  padding-top: 30px;
+}
+.search_bar_tab {
+  margin-bottom: 13px;
+}
+.search_bar_tab button {
+  margin: 0;
+  padding: 0;
+  background-color: #00b38a;
+  border: none;
+  color: #fff;
+  font-size: 16px;
+  padding: 5px 8px 5px 10px;
+}
+.search_bar_tab p {
+  display: inline-block;
+  color: #999;
+  padding: 7px 10px;
+}
+.search_input_bar {
+  display: flex;
+}
+.search_input {
+  height: 20;
+  padding: 12px 15px;
+  border: 1px solid #e8e8e8;
+  flex: 1;
+}
+.search_input_bar button {
+  width: 142px;
+  height: 46px;
+  padding: 15px 55px;
+  margin: 0;
+  background-color: #00b38a;
+  border: none;
+  color: #fff;
+  font-size: 16px;
+  line-height: 16px;
+}
+.related_search,
+.related_search li {
+  display: inline-block;
+  margin-top: 5px;
+}
+.related_title {
+  color: #777;
+  font-size: 14px;
+  margin: 5px 10px 0 0;
+}
+.related_search li a {
+  font-size: 14px;
+  margin-right: 22px;
+  color: #999;
+}
+.filter_wrapper {
+  margin-left: 351px;
+  width: 958px;
+  background-color: #fafafa;
+  border: 1px solid #e8e8e8;
+  position: relative;
+}
+.workplace {
+  color: #555;
+  font-size: 14px;
+  padding: 6px 16px 10px;
+  margin-top: 6px;
+}
+.workplace_title {
+  font-weight: 600;
+  margin-right: 8px;
+}
+.workplace li {
+  display: inline-block;
+  height: 14px;
+  line-height: 14px;
+  padding: 5px 0;
+}
+.workplace li a {
+  padding: 4px 8px;
+  font-size: 14px;
+  color: #555;
+}
+.workplace li:hover a {
+  background-color: #00b38a;
+  color: #fff;
+}
+.workplace li .all {
+  padding: 3px 6px;
+  background-color: #fff;
+  border: 1px solid #cfcfcf;
+}
+.multi_chosen li {
+  display: inline-block;
+}
+
+.multi_chosen {
+  color: #555;
+  font-size: 14px;
+  padding: 6px 16px 10px;
+  margin-top: 6px;
+}
+.chosen_title {
+  font-weight: 600;
+  margin-right: 8px;
+}
+.multi_chosen li {
+  display: inline-block;
+  /* height: 14px; */
+  line-height: 9px;
+  padding: 5px 0;
+}
+.multi_chosen li a {
+  padding: 4px 8px;
+  font-size: 14px;
+  color: #555;
+}
+.multi_chosen li:hover a {
+  background-color: #00b38a;
+  color: #fff;
+}
+.multi_chosen .chosen_active a {
+  padding: 4px 8px;
+  color: #fff;
+  background-color: #00b38a;
+}
+.chosen_active a {
+  color: #fff;
+}
+.workplace_more {
+  position: absolute;
+  top: 14px;
+  right: 38px;
+  color: #555;
+  cursor: pointer;
+  font-weight: 400;
+  font-size: 14px;
+}
+.workplace_more i {
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: 7px;
+  right: -17px;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid #00b38a;
+  /* overflow: hidden; */
+}
+
+.chosen_more {
+  position: absolute;
+  top: 223px;
+  right: 38px;
+  color: #555;
+  cursor: pointer;
+  font-weight: 400;
+  font-size: 14px;
+}
+.chosen_more i{
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: 7px;
+  right: -17px;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #00b38a;
 }
