--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  outline: 0;
 }
 a {
   text-decoration: none;
@@ -1481,3 +1482,154 @@ li {
   display: block;
   margin-top: 15px;
 }
+#banner{
+  background: #f2f5f4;
+  padding: 30px 0 11px;
+  width: 100%;
+}
+.banner_content{
+  width: 1024px;
+  margin: 0 auto;
+  display: flex;
+  justify-content:space-between;
+}
+.banner_content_left{
+  flex: 1;
+}
+.banner_content_right{
+  flex:1;
+}
+.banner_content_title h4{
+  margin:-2px 0 8px 0;
+  font-size: 14px;
+  font-weight: 400;
+  color: #555;
+}
+.banner_content_title h1{
+  height: 36px;
+  font-size: 36px;
+  color:#333;
+  line-height: 36px;
+  font-weight: 400;
+}
+.banner_content_demand{
+  margin-top: 10px;
+  font-size: 18px;
+  font-weight: 400;
+  color:#555;
+  margin-bottom: 8px;
+}
+.banner_salary{
+  color:#fd5f39;
+}
+.banner_laber{
+
+}
+.banner_label span{
+  height: 22px;
+  line-height: 22px;
+  margin-right: 8px;
+  font-size: 12px;
+  color:#70797b;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  background-color: #fff;
+  padding: 3px 10px;
+}
+.release{
+  margin-top: 10px;
+  font-size: 14px;
+  color: #999;
+}
+.deal{
+  
+}
+.collect{
+  display: inline-block;
+  height: 44px;
+  width: 104px;
+  line-height: 44px;
+  background: #ebf0ef;
+  font-size: 14px;
+  text-align: center;
+  border:1px solid #00b38a;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  color:#00b38a;
+}
+/* .collect::before{
+  content:"\e909"
+} */
+.collect:hover{
+  color:#00a57f;
+  border-color:#00a57f;
+}
+.delivery{
+  display: inline-block;
+  margin-left: 17px;
+  padding: 0 30px;
+  border:1px solid #00b38a;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  height: 44px;
+  line-height: 44px;
+  font-size: 18px;
+  color:#fff;
+  cursor:pointer;
+  background: #00b38a;
+}
+.delivery:hover{
+  background-color: #00a57f;
+  border-color:#00a57f;
+}
+.perfect{
+  margin-top: 16px;
+  margin-bottom: 11px;
+  justify-content: flex-end;
+}
+.complete{
+  color:#555;
+  font-size: 14px;
+  text-decoration: underline;
+  margin-left: 10px;
+}
+/* .complete::before{
+  content:"\e908"
+} */
+.complete:hover{
+  color:#00a57f;
+}
+.resume_upload{
+  color:#555;
+  font-size: 14px;
+  text-decoration: underline;
+  margin-left: 60px;
+}
+/* .resume_upload::before{
+  content:"\e901"
+} */
+.resume_upload:hover{
+  color:#00a57f;
+}
+.related_content{
+  width: 1200px;
+  margin: 0 auto;
+}
+.related_content_left{
+  padding: 26px 52px 0 0;
+  width: 696px;
+  background:url(./img/gradient_e624ed8.png) repeat-y;
+  background-position: right ;
+  padding-right: 52px;
+  
+}
+
